# rust-aluvm

./: .gitignore  .rustfmt.toml  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MAINTAINERS.md  MANIFEST.yml  Makefile.toml  README.md  codecov.yml  license_header
.github/: FUNDING.yml
.github/workflows/: build.yml  codecov.yml  lint.yml  test.yml
examples/: all.aluasm  asm.rs  pow.aluasm  rgb.rs
scripts/: typelib.sh
src/: cursor.rs  instruction.rs  lib.rs  library.rs  program.rs  registers.rs  runtime.rs  stl.rs  types.rs  vm.rs
src/bytecoder/: cursor.rs  mod.rs  rw.rs
src/core/: alu64.rs  core.rs  microcode.rs  mod.rs  regs.rs  util.rs
src/core/microcode/: alu128.rs  base.rs  gfa.rs  mod.rs
src/data/: arithm.rs  bitwise.rs  byte_array.rs  byte_str.rs  cmp.rs  encoding.rs  flags.rs  mod.rs  number.rs
src/encoding/: cursor.rs  io.rs  mod.rs
src/instr/: asm.rs  bitcode.rs  bytecode.rs  encoding.rs  exec.rs  flags.rs  instr.rs  mod.rs  op_codes.rs  op_types.rs  opcode.rs  serialize.rs
src/isa/: alu.rs  arch.rs  asm.rs  bytecode.rs  exec.rs  flags.rs  instr.rs  macros.rs  masm.rs  mod.rs  opcodes.rs
src/isa-old/: bytecode.rs  exec.rs  flags.rs  mod.rs  opcodes.rs
src/isa/alu/: bytecode.rs  exec.rs  instr.rs  mod.rs
src/isa/alu64/: bytecode.rs  exec.rs  instr.rs  mod.rs
src/isa/ctrl/: exec.rs  instr.rs
src/isa/gfa/: bytecode.rs  exec.rs  instr.rs  mod.rs
src/libs/: constants.rs  cursor.rs  library.rs  mod.rs  model.rs  rw.rs  segs.rs
src/program/: constants.rs  cursor.rs  lib.rs  mod.rs  program.rs  rw.rs  segs.rs
src/reg/: arithm.rs  bitwise.rs  byte_str.rs  core_regs.rs  families.rs  indexes.rs  mod.rs  number.rs  reg.rs  value.rs
stl/: AluVM.asc.stl  AluVM.stl  AluVM.sty  AluVM@0.1.0.sta  AluVM@0.1.0.stl  AluVM@0.1.0.sty
tests/: asm.rs  depCargo.toml
