[package]
name = "aluvm"
description = "Functional registry-based RISC virtual machine"
version = "0.11.0-beta.9"
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
repository = "https://github.com/aluvm/rust-aluvm"
homepage = "https://aluvm.org"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
rust-version = "1.76.0" # Due to ascii-armor
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
exclude = [".github"]

[lib]
name = "aluvm"

[[bin]]
name = "aluvm-stl"
required-features = ["stl"]

[dependencies]
amplify = { version = "4.7.0", default-features = false, features = ["apfloat", "derive", "hex"] }
ascii-armor = { version = "0.7.2", optional = true }
baid64 = "0.2.2"
paste = "1"
strict_encoding = { version = "2.7.0", default-features = false, features = ["float", "derive"] }
strict_types = { version = "2.7.2", optional = true }
sha2 = "0.10.8"
blake3 = "1.5.4"
ripemd = "0.1.3"
secp256k1 = { version = "0.30.0", optional = true, features = ["global-context", "std"] }
curve25519-dalek = { version = "3.2.1", optional = true, features = ["std"] }
half = "2.4.1" # Required to maintain MSRV
serde_crate = { package = "serde", version = "1", optional = true }

[features]
default = ["std"]
all = ["stl", "std", "log", "secp256k1", "curve25519", "serde", "ascii-armor"]
stl = ["strict_types/armor", "std"]
std = ["amplify/std"]
log = ["std"]
alloc = ["amplify/alloc"]
secp256k1 = ["dep:secp256k1", "std"]
curve25519 = ["curve25519-dalek", "std"]
serde = ["serde_crate", "amplify/serde", "std", "strict_encoding/serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
