[package]
name = "aluvm"
description = "Functional registry-based RISC virtual machine"
version = "0.12.0-nightly-zkaluvm.1"
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
repository = "https://github.com/aluvm/rust-aluvm"
homepage = "https://aluvm.org"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
rust-version = "1.77.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
exclude = [".github"]

[lib]
name = "aluvm"

[[bin]]
name = "aluvm-stl"
required-features = ["stl"]

[dependencies]
amplify = "4.7.0"
ascii-armor = { version = "0.7.2", optional = true }
baid64 = "0.2.2"
commit_verify = "0.11.0-beta.8"
paste = "1"
strict_encoding = { version = "2.7.0", default-features = false, features = ["derive"] }
strict_types = { version = "2.7.2", optional = true }
serde = { version = "1", optional = true }

[features]
default = []
# `all` must exclude specific ISA, which may be in a conflict with each other
# The consumer of the library is expected to add required ISA manually
all = ["std", "stl", "log", "armor", "serde"]

std = []
armor = ["dep:ascii-armor", "strict_types/armor"]
stl = ["armor", "strict_types", "GFA"]
log = []
alloc = ["amplify/alloc"]
serde = ["dep:serde", "amplify/serde", "strict_encoding/serde"]

# Instruction set architecture extensions
zk-aluvm = ["GFA"] # Feature ensuring zk-AluVM configuration excluding all zk-incompatible features
A64 = []
A128 = ["A64"]
# A256 = ["A128"]
# A512 = ["A512"]
# A1024 = ["A1024"]
GFA = []
STR = []
# ARRAY = []
# FL64 = []
# FL80 = ["FL64", "amplify/apfloat"]
# FLQTR = ["FL80"]
# FLOCT = ["FLOCT"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
