[package]
name = "aluvm"
description = "Functional registry-based RISC virtual machine"
version = "0.12.0-beta.3"
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
repository = "https://github.com/aluvm/rust-aluvm"
homepage = "https://aluvm.org"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
rust-version = "1.77.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
exclude = [".github"]

[lib]
name = "aluvm"

[[bin]]
name = "aluvm-stl"
required-features = ["stl"]

[dependencies]
amplify = { version = "~4.8.0", default-features = false, features = ["derive"] }
ascii-armor = { version = "0.9.0", optional = true }
baid64 = "0.4.1"
commit_verify = "0.12.0-beta.1"
paste = "1"
strict_encoding = { version = "~2.8.1", default-features = false, features = ["derive"] }
strict_types = { version = "~2.8.1", optional = true }
serde = { version = "1", optional = true }

[features]
default = []
all = ["std", "stl", "log", "armor", "serde"]

std = ["amplify/std"]
armor = ["dep:ascii-armor", "strict_types/armor"]
stl = ["armor", "strict_types"]
log = []
alloc = ["amplify/alloc"]
serde = ["dep:serde", "amplify/serde", "strict_encoding/serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
